[tool.poetry]
name = "fastapi-experiments"
version = "0.1.0"
description = "Small experiments with FastAPI in a simple environment"
authors = ["Brylie Christopher Oxley <brylie@amble.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
